--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout source code
-      - uses: actions/checkout@main
+        uses: actions/checkout@main
       
       - name: Cache node modules
-      - uses: actions/cache@v1
+        uses: actions/cache@v1
         with:
           path: node_modules
           key: ${{ runner.OS }}-master-build-${{ hashFiles('**/yarn.lock') }}
